# channel-capacity

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: bounds.rs  capacity.rs  channel.rs  lib.rs  mutual_info.rs  waterfill.rs
